# Markdown2Json

./: .gitignore  README.md  alpaca_config.json  alpaca_dataset_builder.py  configurable_integration_dataset_builder.py  enhanced_main.py  enhanced_vectorizer.py  integration_config.json  json_analyzer.py  main.py  md_to_json_converter.py  pyproject.toml  semantic_search.py  运行Alpaca数据集构建.bat  运行增强向量化.bat  运行转换.bat
